# cpp_sensor_core

./: .gitignore  CMakeLists.txt  README.md  build.sh  deploy.sh  mosquitto.conf-example  package-lock.json  package.json  sensor-simulator.service  test_mqtt.sh  test_protobuf.py  toolchain-imx8mp.cmake
src/: action_handler.h  data_converter.cpp  data_converter.h  main.cpp  mqtt_client.cpp  mqtt_client.h  protobuf_converter.cpp  protobuf_converter.h  sensor_simulator.cpp  sensor_simulator.h
